--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -9,11 +9,12 @@
 @import './moduls/btn';
 
 //Blocks
+@import './blocks/timer';
 
 //Sections
 @import './sections/header';
 @import './sections/cover';
 @import './sections/video';
 @import './sections/moduls';
+@import './sections/packets';
 @import './sections/footer';
-
