--- a/scss/sections/_moduls.scss
+++ b/scss/sections/_moduls.scss
@@ -1,6 +1,17 @@
 .moduls {
   margin-bottom: 291px;
+  position: relative;
+  &__dec {
+    position: absolute;
+    width: 100%;
+    max-width: 450px;
+    display: flex;
+    top: calc(100% - 50px);
+    right: 0;
+  }
   &__wrapper {
+    position: relative;
+    z-index: 1;
   }
 
   &__title {
@@ -121,6 +132,9 @@
     line-height: 145%;
     letter-spacing: 0%;
     margin-bottom: 9px;
+    &--mb20 {
+      margin-bottom: 20px;
+    }
   }
 
   &__tabs-content-text {
