--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -7,6 +7,8 @@
 //Moduls
 @import './moduls/title';
 @import './moduls/btn';
+@import './moduls/modal';
+@import './moduls/form';
 
 //Blocks
 @import './blocks/timer';
