--- a/scss/global/_var.scss
+++ b/scss/global/_var.scss
@@ -5,6 +5,8 @@
   --font-text-3: 'Mont', sans-serif;
 
   //color
+  --color-1: 242, 255, 94;
 
   //gradient
+  --gradient: linear-gradient(139.92deg, rgb(255, 255, 255), rgb(153, 153, 153));
 }
