--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -12,11 +12,25 @@
 
 //Blocks
 @import './blocks/timer';
+@import './blocks/content';
 
 //Sections
 @import './sections/header';
 @import './sections/cover';
 @import './sections/video';
+@import './sections/description';
+@import './sections/levels';
+@import './sections/info';
+@import './sections/block';
+@import './sections/benefits';
+@import './sections/questions';
+@import './sections/plan';
 @import './sections/moduls';
 @import './sections/packets';
+@import './sections/actions';
+@import './sections/advantages';
+@import './sections/about';
+@import './sections/why';
+@import './sections/program';
 @import './sections/footer';
+
