--- a/scss/global/_global.scss
+++ b/scss/global/_global.scss
@@ -1,5 +1,5 @@
 body {
-  background-color: #0a0a0b;
+  background-color: #050505;
   color: #e6e6e6;
   font-family: var(--font-text-1);
   font-weight: normal;
@@ -22,4 +22,22 @@ body {
   -webkit-text-fill-color: transparent;
   background-clip: text;
   text-fill-color: transparent;
+}
+
+.--select {
+  color: rgb(var(--color-1));
+}
+
+.decore {
+  position: absolute;
+  width: 100%;
+  display: flex;
+  left: 0;
+  top: 0;
+}
+
+@media (min-width: 1920px) {
+  .decore {
+    display: none;
+  }
 }
