--- a/scss/moduls/_title.scss
+++ b/scss/moduls/_title.scss
@@ -1,2 +1,60 @@
 .title {
+  @include text-gradient;
+  color: rgb(255, 255, 255);
+  font-size: 50px;
+  font-weight: 700;
+  line-height: 90%;
+  letter-spacing: 0%;
+
+  &--uppercase {
+    text-transform: uppercase;
+  }
+
+  &--fz-40 {
+    font-size: 40px;
+  }
+
+  &--fz-60 {
+    font-size: 60px;
+  }
+
+  &--fz-77 {
+    font-size: 77px;
+  }
+}
+@media (max-width: 900px) {
+  .title {
+    &--fz-77 {
+      font-size: 60px;
+    }
+  }
+}
+
+@media (max-width: 800px) {
+  .title {
+    font-size: 40px;
+    &--fz-40 {
+      font-size: 30px;
+    }
+    &--fz-77 {
+      font-size: 55px;
+    }
+  }
+}
+
+@media (max-width: 550px) {
+  .title {
+    font-size: 30px;
+    &--fz-77 {
+      font-size: 40px;
+    }
+  }
+}
+
+@media (max-width: 400px) {
+  .title {
+    &--fz-77 {
+      font-size: 30px;
+    }
+  }
 }
