--- a/scss/sections/_packets.scss
+++ b/scss/sections/_packets.scss
@@ -59,9 +59,9 @@
   &__item {
     padding: 58px 52px 50px;
     border-radius: 11.63px;
-    background-color: rgb(22, 23, 24);
+    // background-color: rgb(22, 23, 24);
     position: relative;
-    &::before {
+    &::after {
       content: '';
       position: absolute;
       width: 121px;
@@ -72,11 +72,32 @@
       background-repeat: no-repeat;
       background-size: contain;
     }
+
+    background: linear-gradient(
+      42deg,
+      rgba(255, 255, 255, 0.2) 0%,
+      rgba(10, 10, 11, 1) 50%,
+      rgba(255, 255, 255, 0.2) 100%
+    );
+
+    &::before {
+      content: '';
+      position: absolute;
+      border-radius: 11.63px;
+
+      width: calc(100% - 1.5px);
+      height: calc(100% - 1.5px);
+      left: 50%;
+      top: 50%;
+      transform: translateX(-50%) translateY(-50%);
+      background-color: rgb(22, 23, 24);
+    }
   }
 
   &__item-title {
     display: flex;
     align-items: flex-end;
+    position: relative;
     margin-bottom: 26px;
 
     p {
@@ -99,6 +120,7 @@
   &__item-list {
     list-style-position: outside;
     list-style-type: disc;
+    position: relative;
     margin-bottom: 48px;
     li {
       font-size: 14px;
@@ -119,6 +141,7 @@
   }
 
   &__item-info {
+    position: relative;
   }
 
   &__item-info-text {
