--- a/scss/global/_global.scss
+++ b/scss/global/_global.scss
@@ -3,6 +3,7 @@ body {
   color: #e6e6e6;
   font-family: var(--font-text-1);
   font-weight: normal;
+  font-size: 18px;
   position: relative;
   &.lock {
     overflow: hidden;
