--- a/scss/sections/_plan.scss
+++ b/scss/sections/_plan.scss
@@ -35,7 +35,7 @@
     max-width: 418px;
 
     p {
-      font-size: 17px;
+      font-size: 18px;
       font-weight: 600;
       line-height: 145%;
       letter-spacing: 0%;
@@ -72,7 +72,7 @@
   }
 
   &__item-text {
-    font-size: 17.76px;
+    font-size: 18px;
     font-weight: 600;
     line-height: 145%;
     letter-spacing: 0%;
@@ -110,7 +110,15 @@
       font-size: 60px;
     }
     &__item-text {
-      font-size: 14px;
+      font-size: 18px;
+    }
+    &__items {
+      flex-direction: column;
+      margin-bottom: 50px;
+    }
+    &__item {
+      margin-right: 0;
+      margin-bottom: 20px;
     }
   }
 }
@@ -126,12 +134,12 @@
       margin-right: 10px;
     }
     &__item-text {
-      font-size: 12px;
+      font-size: 18px;
     }
   }
 }
 
-@media (max-width: 850px) {
+@media (max-width: 950px) {
   .plan {
     &__title-block {
       margin-bottom: 50px;
@@ -145,13 +153,14 @@
     &__title-text {
       text-align: center;
     }
-    &__items {
-      flex-direction: column;
-      margin-bottom: 50px;
-    }
+  }
+}
+
+@media (max-width: 450px) {
+  .plan {
     &__item {
-      margin-right: 0;
-      margin-bottom: 20px;
+      flex-direction: column;
+      align-items: flex-start;
     }
   }
 }
