--- a/scss/sections/_program.scss
+++ b/scss/sections/_program.scss
@@ -92,7 +92,7 @@
     padding-left: 46px;
     position: relative;
     color: rgb(255, 255, 255);
-    font-size: 14px;
+    font-size: 18px;
     font-weight: 400;
     line-height: 145%;
     letter-spacing: 0%;
@@ -260,10 +260,13 @@
   }
 
   &__video {
-    display: flex;
-    max-width: 664px;
-    width: 100%;
     border-radius: 10px;
+
+    --w: 664px;
+    display: flex;
+    width: 100%;
+    max-width: var(--w);
+    height: calc(var(--w) / 16 * 9);
     overflow: hidden;
   }
 
@@ -355,7 +358,7 @@
     );
     p {
       font-style: italic;
-      font-size: 16px;
+      font-size: 18px;
       font-weight: 400;
       line-height: 145%;
       letter-spacing: 0%;
@@ -418,7 +421,7 @@
     }
     &__resum-text {
       p {
-        font-size: 16px;
+        font-size: 18px;
       }
     }
     &__items {
@@ -428,7 +431,7 @@
       }
     }
     &__item {
-      font-size: 16px;
+      font-size: 18px;
       &:nth-child(even) {
         text-align: left;
         padding: 0 0 0 54px;
@@ -454,7 +457,7 @@
     &__item--dec {
       p {
         max-width: fit-content;
-        font-size: 16px;
+        font-size: 18px;
         &::before {
           right: calc(100% + 30px);
         }
@@ -465,6 +468,9 @@
     }
     &__video-title {
       font-size: 20px;
+    }
+    &__video {
+      --w: 500px;
     }
     &__result {
       padding: 54px 20px;
@@ -493,6 +499,18 @@
         }
       }
     }
+
+    &__video {
+      --w: 400px;
+    }
+  }
+}
+
+@media (max-width: 450px) {
+  .program {
+    &__video {
+      --w: 300px;
+    }
   }
 }
 
@@ -500,6 +518,9 @@
   .program {
     &__resum-info {
       font-size: 20px;
+    }
+    &__video {
+      --w: 280px;
     }
   }
 }
