--- a/scss/sections/_actions.scss
+++ b/scss/sections/_actions.scss
@@ -31,6 +31,21 @@
     text-align: center;
     margin-bottom: 110px;
   }
+  &__items-line {
+    position: sticky;
+    width: 4px;
+    height: 100px;
+    background-color: rgb(var(--color-1));
+    top: 30px;
+    left: 50%;
+    bottom: 100px;
+    transform: translateX(-50%) translateY(0px);
+  }
+
+  &__items-block {
+    position: relative;
+    display: flex;
+  }
 
   &__items {
     width: 100%;
@@ -46,6 +61,7 @@
       transform: translateX(-50%);
       background: linear-gradient(180deg, rgb(0, 0, 0), rgb(255, 255, 255) 50%, rgb(0, 0, 0) 100%);
       opacity: 0.1;
+      margin-bottom: -100px;
     }
   }
 
@@ -59,18 +75,35 @@
       margin-bottom: 0;
     }
     &.active {
-      .actions.actions__item-icon {
-        fill: rgb(var(--color-1));
+      &:nth-child(1) {
+        .actions__item-icon {
+          background-image: url(../img/actions/1-1.svg);
+        }
       }
-      &::before {
-        content: '';
-        position: absolute;
-        width: 4px;
-        height: 100px;
-        background-color: rgb(var(--color-1));
-        top: 0;
-        left: 50%;
-        transform: translateX(-50%);
+      &:nth-child(2) {
+        .actions__item-icon {
+          background-image: url(../img/actions/2-1.svg);
+        }
+      }
+      &:nth-child(3) {
+        .actions__item-icon {
+          background-image: url(../img/actions/3-1.svg);
+        }
+      }
+      &:nth-child(4) {
+        .actions__item-icon {
+          background-image: url(../img/actions/4-1.svg);
+        }
+      }
+      &:nth-child(5) {
+        .actions__item-icon {
+          background-image: url(../img/actions/5-1.svg);
+        }
+      }
+      &:nth-child(6) {
+        .actions__item-icon {
+          background-image: url(../img/actions/6-1.svg);
+        }
       }
     }
     &:nth-child(even) {
@@ -84,6 +117,37 @@
         text-align: left;
       }
     }
+
+    &:nth-child(1) {
+      .actions__item-icon {
+        background-image: url(../img/actions/1.svg);
+      }
+    }
+    &:nth-child(2) {
+      .actions__item-icon {
+        background-image: url(../img/actions/2.svg);
+      }
+    }
+    &:nth-child(3) {
+      .actions__item-icon {
+        background-image: url(../img/actions/3.svg);
+      }
+    }
+    &:nth-child(4) {
+      .actions__item-icon {
+        background-image: url(../img/actions/4.svg);
+      }
+    }
+    &:nth-child(5) {
+      .actions__item-icon {
+        background-image: url(../img/actions/5.svg);
+      }
+    }
+    &:nth-child(6) {
+      .actions__item-icon {
+        background-image: url(../img/actions/6.svg);
+      }
+    }
   }
 
   &__item-content {
@@ -93,6 +157,9 @@
     display: flex;
     width: 100%;
     max-width: 36px;
+    height: 36px;
+    background-repeat: no-repeat;
+    background-size: contain;
     margin: 0 0 30px auto;
   }
 
