--- a/scss/sections/_info.scss
+++ b/scss/sections/_info.scss
@@ -8,6 +8,9 @@
   &__wrapper {
     position: relative;
     z-index: 1;
+    width: 100%;
+    max-width: 1189px;
+    margin: 0 auto;
   }
   &__content {
     padding: 40px 0;
