--- a/scss/sections/_packets.scss
+++ b/scss/sections/_packets.scss
@@ -60,19 +60,7 @@
   &__item {
     padding: 58px 52px 50px;
     border-radius: 11.63px;
-    // background-color: rgb(22, 23, 24);
     position: relative;
-    &::after {
-      content: '';
-      position: absolute;
-      width: 121px;
-      height: 77px;
-      top: -31px;
-      right: -12px;
-      background-image: url(../img/packets/dec.png);
-      background-repeat: no-repeat;
-      background-size: contain;
-    }
 
     background: linear-gradient(
       42deg,
@@ -93,6 +81,14 @@
       transform: translateX(-50%) translateY(-50%);
       background-color: rgb(22, 23, 24);
     }
+  }
+
+  &__item-discount {
+    position: absolute;
+    z-index: 1;
+    top: -16px;
+    right: -8px;
+    transform: rotate(-15deg);
   }
 
   &__item-title {
