--- a/scss/sections/_why.scss
+++ b/scss/sections/_why.scss
@@ -141,6 +141,19 @@
     line-height: 145%;
     letter-spacing: 0%;
     text-transform: uppercase;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    span {
+      color: rgb(var(--color-1));
+      font-size: 16px;
+      font-weight: 600;
+      line-height: 145%;
+      letter-spacing: 0%;
+      text-transform: none;
+      display: block;
+    }
   }
 
   &__slider-wrapper {
@@ -193,6 +206,18 @@
   }
 }
 
+@media (max-width: 1200px) {
+  .why {
+    &__info-items {
+      grid-template-columns: repeat(1, 1fr);
+      grid-row-gap: 20px;
+    }
+    &__info-title {
+      margin-bottom: 30px;
+    }
+  }
+}
+
 @media (max-width: 1100px) {
   .why {
     &__info {
@@ -201,11 +226,10 @@
         align-items: flex-start;
         margin: 0 auto;
         max-width: fit-content;
-
-        .why__info-content {
-          margin-bottom: 30px;
-        }
       }
+    }
+    &__slider-wrapper {
+      margin-bottom: 30px;
     }
   }
 }
@@ -223,13 +247,6 @@
     }
     &__title-text {
       text-align: center;
-    }
-    &__info-items {
-      grid-template-columns: repeat(1, 1fr);
-      grid-row-gap: 20px;
-    }
-    &__info-title {
-      margin-bottom: 30px;
     }
   }
 }
@@ -258,9 +275,20 @@
     &__info {
       flex-direction: column;
     }
+    &__info-title {
+      text-align: center;
+    }
     &__info-img {
       margin-right: 0;
-      margin-bottom: 20px;
+      margin: 0 auto 20px;
+    }
+  }
+}
+
+@media (max-width: 400px) {
+  .why {
+    &__info-item-num {
+      font-size: 24px;
     }
   }
 }
