--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -34,3 +34,38 @@
 @import './sections/program';
 @import './sections/footer';
 
+.discount {
+  background-color: #da2323;
+  display: flex;
+  align-items: center;
+  border-radius: 0 5px 5px 0;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 5px 7px 5px 40px;
+  clip-path: polygon(14% 0%, 100% 0%, 100% 100%, 14% 100%, 0% 50%);
+  &::before {
+    content: '';
+    position: absolute;
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    background-color: #0a0a0b;
+    top: 50%;
+    left: 18px;
+    transform: translateY(-50%);
+  }
+
+  p {
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 110%;
+    letter-spacing: 0%;
+    text-align: left;
+  }
+
+  &--fz-20 {
+    p {
+      font-size: 20px;
+    }
+  }
+}
