--- a/scss/sections/_actions.scss
+++ b/scss/sections/_actions.scss
@@ -36,7 +36,7 @@
     width: 4px;
     height: 100px;
     background-color: rgb(var(--color-1));
-    top: 30px;
+    top: 50%;
     left: 50%;
     bottom: 100px;
     transform: translateX(-50%) translateY(0px);
