--- a/scss/sections/_program.scss
+++ b/scss/sections/_program.scss
@@ -270,6 +270,31 @@
   &__video-item {
     display: flex;
     height: 390px;
+    position: relative;
+    &::before {
+      content: '';
+      position: absolute;
+      z-index: 1;
+      width: 55px;
+      height: 55px;
+      left: 50%;
+      top: 50%;
+      background-image: url(../img/icons/play.svg);
+      background-repeat: no-repeat;
+      background-size: contain;
+      display: flex;
+      transform: translateX(-50%) translateY(-50%);
+    }
+
+    &::after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      left: 0;
+      top: 0;
+      background-color: rgba(0, 0, 0, 0.5);
+    }
   }
 
   &__result {
