--- a/scss/sections/_why.scss
+++ b/scss/sections/_why.scss
@@ -60,8 +60,7 @@
       justify-content: space-between;
       max-width: 1085px;
       margin: 0 auto;
-      align-items: flex-end;
-
+      align-items: center;
       .why__info-img {
         max-width: 685px;
         margin-right: 0;
@@ -158,7 +157,7 @@
 
   &__slider-wrapper {
     width: 100%;
-    max-width: 584px;
+    max-width: 250px;
   }
 
   &__slider {
@@ -172,6 +171,7 @@
     max-width: 100%;
     display: flex;
     overflow: hidden;
+    height: 450px;
     border-radius: 18.75px;
   }
 
@@ -220,14 +220,6 @@
 
 @media (max-width: 1100px) {
   .why {
-    &__info {
-      &-2 {
-        flex-direction: column;
-        align-items: flex-start;
-        margin: 0 auto;
-        max-width: fit-content;
-      }
-    }
     &__slider-wrapper {
       margin-bottom: 30px;
     }
@@ -254,6 +246,24 @@
 @media (max-width: 768px) {
   .why {
     margin-bottom: 80px;
+    &__info {
+      &-2 {
+        flex-direction: column;
+        align-items: flex-start;
+        margin: 0 auto;
+        max-width: 100%;
+
+        .why__info-content {
+          max-width: 100%;
+        }
+      }
+    }
+    &__info-mob {
+      margin-bottom: 30px;
+    }
+    &__slider-wrapper {
+      margin: 0 auto;
+    }
     &__info-img {
       max-width: 200px;
     }
