--- a/scss/sections/_levels.scss
+++ b/scss/sections/_levels.scss
@@ -247,6 +247,9 @@
       }
     }
     &__item-list-elem {
+      br {
+        display: none;
+      }
       &::before {
         top: 3px;
       }
