--- a/scss/sections/_block.scss
+++ b/scss/sections/_block.scss
@@ -97,7 +97,13 @@
   .block {
     &-3 {
       margin-bottom: 80px;
+      &__mob {
+        margin: 0 auto;
+        display: flex;
+        justify-content: center;
+      }
     }
+
     &__img {
       max-width: 250px;
       margin-right: 0;
