--- a/scss/sections/_moduls.scss
+++ b/scss/sections/_moduls.scss
@@ -49,7 +49,13 @@
     top: 30px;
   }
 
+  &__tabs-btn-wrapper {
+    max-width: 100%;
+  }
+
   &__tabs-btn {
+    width: 100%;
+    min-width: 350px;
     border: 0;
     cursor: pointer;
     display: flex;
@@ -220,6 +226,10 @@
     }
     &__tabs-btn {
       padding: 10px 20px;
+      min-width: 0;
+    }
+    &__tabs-content {
+      margin-top: 20px;
     }
     &__tabs-content-item {
       p,
