--- a/scss/sections/_program.scss
+++ b/scss/sections/_program.scss
@@ -245,6 +245,8 @@
 
   &__video-block {
     width: 100%;
+    max-width: 1210px;
+
     margin: 0 auto 109px;
   }
 
@@ -271,30 +273,6 @@
     display: flex;
     height: 390px;
     position: relative;
-    &::before {
-      content: '';
-      position: absolute;
-      z-index: 1;
-      width: 55px;
-      height: 55px;
-      left: 50%;
-      top: 50%;
-      background-image: url(../img/icons/play.svg);
-      background-repeat: no-repeat;
-      background-size: contain;
-      display: flex;
-      transform: translateX(-50%) translateY(-50%);
-    }
-
-    &::after {
-      content: '';
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      left: 0;
-      top: 0;
-      background-color: rgba(0, 0, 0, 0.5);
-    }
   }
 
   &__result {
@@ -435,6 +413,9 @@
     &__result-dec {
       display: none;
     }
+    &__video-item {
+      height: 500px;
+    }
   }
 }
 
@@ -534,7 +515,7 @@
       margin: 0 auto 50px;
     }
     &__video-item {
-      height: 520px;
+      height: 535px;
     }
     &__result {
       padding: 54px 20px;
